# spar

./: .gitignore  AGENTS.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  agent-swarm.toml.example  spar.toml.example
docs/: PRODUCT.md  agent-operator.md  architecture-a2a.md  architecture-dual-backend.md
plans/: 01-review-result-parser-verify.md  01-review-result-parser.md  02-criterion-ids-and-reviewer-context-verify.md  02-criterion-ids-and-reviewer-context.md  03-acceptance-gate-verify.md  03-acceptance-gate.md  04-shared-slot-sanitizer-verify.md  04-shared-slot-sanitizer.md  05-provider-ref-model-verify.md  05-provider-ref-model.md  06-codex-adapter-verify.md  06-codex-adapter.md  07-openrouter-model-list-verify.md  07-openrouter-model-list.md  08-roles-config-verify.md  08-roles-config.md  09-role-resolution-rewire-verify.md  09-role-resolution-rewire.md  TRACKER.md
roadmap/: BACKLOG.md  ROADMAP.md  tui-redesign-plan.md  workspace-initiative-plan.md
roadmap/features/: 001-model-select.md  002-image-paste-over-ssh.md
skills/: core.md  fleet.md
src/: bus.rs  cli.rs  config.rs  doctor.rs  events.rs  executor.rs  exit_codes.rs  liveness.rs  mailbox.rs  main.rs  markers.rs  notify.rs  paths.rs  process.rs  provider_ref.rs  quota.rs  registry.rs  runlock.rs  ship.rs  skills.rs  state.rs  tasks.rs  templates.rs  terminal.rs  tmux.rs  tui.rs  util.rs  workspace.rs  worktree.rs
src/api/: mod.rs  openai_compat.rs  runtime.rs
src/model_select/: cache.rs  map.rs  mod.rs  openrouter.rs  score.rs  vals.rs
src/providers/: agy.rs  agy_telemetry.rs  claude.rs  codex.rs  delivery.rs  grok.rs  mod.rs  opencode.rs  presence.rs
src/sandbox/: bwrap.rs  mod.rs
src/workflow/: arena.rs  implement.rs  mod.rs  peer.rs  plan.rs  review.rs  review_result.rs  roles.rs  roles_resolve.rs
templates/: implementer.md  peer_half.md  plan_critic.md  planner.md  ranker.md  reconciler.md  reviewer_adversarial.md  role_backend.md  role_frontend.md  test_author.md  tester.md
tests/fixtures/vals/: swebench_overall.json  swebench_overall_rsc.txt
tests/scenarios/: amendment.rs  bus_deliver.rs  liveness.rs  plan_implement.rs  roles_config.rs  runlock.rs  stop.rs
