[package]
name = "spar"
version = "0.0.1"
edition = "2021"
description = "Multi-agent coding product: fleet TUI, dual backends, plan/review/arena/ship"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Himmelschmidt/spar"
homepage = "https://github.com/Himmelschmidt/spar"
documentation = "https://github.com/Himmelschmidt/spar#readme"
keywords = ["agents", "orchestration", "cli", "tui"]
categories = ["command-line-utilities", "development-tools"]
# Note: the crates.io name `spar` is taken by an unrelated project.
# Install from this git repository (see README).

[[bin]]
name = "spar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
ureq = { version = "3.3.0", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

[[test]]
name = "plan_implement"
path = "tests/scenarios/plan_implement.rs"

[[test]]
name = "liveness"
path = "tests/scenarios/liveness.rs"

[[test]]
name = "stop"
path = "tests/scenarios/stop.rs"
